# bugsight

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  api.txt  demo.cast
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_parser.md
.github/workflows/: ci.yml
docs/: index.html
docs/css/: style.css
docs/js/: main.js
src/: ai.rs  analyzer.rs  config.rs  history.rs  lang.rs  main.rs
src/parsers/: c_cpp.rs  docker.rs  general.rs  git.rs  golang.rs  java.rs  mod.rs  nodejs.rs  php.rs  python.rs  ruby.rs  rust.rs
