[package]
name = "bugsight"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] } 
colored = "2"                                       
regex = "1"                                         
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
