[package]
name = "bugsight"
version = "0.3.0"
edition = "2021"
description = "Debug smarter, not harder — CLI tool that analyzes errors and suggests fixes"
license = "MIT"
repository = "https://github.com/Arnel-rah/bugsight"
homepage = "https://github.com/Arnel-rah/bugsight"
readme = "README.md"
keywords = ["cli", "debugging", "errors", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = "0.4.44"
clap = { version = "4", features = ["derive"] }
colored = "2"
dirs = "6.0.0"
regex = "1"
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
